--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "scripts": {
     "start": "webpack-cli serve --open --mode development",
     "build": "webpack --mode production",
@@ -29,6 +28,7 @@
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.74.0",
