--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/kadetito/mango#readme",
   "dependencies": {
-    "babel-preset-es2015": "^6.24.1",
+
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -30,8 +30,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
+    "@babel/register": "^7.18.9",
     "babel-loader": "^8.2.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
