--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,13 @@
         "@babel/preset-react"
     ],
     "plugins": [
-        "transform-class-properties"
+     
+        "syntax-dynamic-import",
+        "dynamic-import-node",
+        "transform-class-properties",
+        "transform-decorators-legacy"
     ]
+    
+
+
 }
