--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-cli serve --open --mode development",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/kadetito/mango#readme",
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "classnames": "^2.3.2",
     "multi-range-slider-react": "^2.0.2",
     "react": "^18.2.0",
@@ -34,12 +35,18 @@
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/register": "^7.18.9",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "babel-jest": "^29.1.2",
     "babel-loader": "^8.2.5",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^6.7.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "node-sass": "^7.0.3",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
