--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest-environment-jsdom": "^29.1.2",
     "node-sass": "^7.0.3",
     "sass-loader": "^13.1.0",
+    "bootstrap-sass": "^3.3.7",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
