--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "classnames": "^2.3.2",
+    "bootstrap": "^5.2.2",
     "multi-range-slider-react": "^2.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-range": "^1.8.14",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "sass-loader": "^13.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -48,7 +50,7 @@
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "node-sass": "^7.0.3",
-    "sass-loader": "^13.1.0",
+
     "bootstrap-sass": "^3.3.7",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
