--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "homepage": "https://github.com/kadetito/mango#readme",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "classnames": "^2.3.2",
     "bootstrap": "^5.2.2",
+    "classnames": "^2.3.2",
     "multi-range-slider-react": "^2.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.4.2",
     "sass-loader": "^13.1.0"
   },
+  "browserslist": "> 0.25%, not dead",
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -44,14 +46,13 @@
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^6.7.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
     "node-sass": "^7.0.3",
-
-    "bootstrap-sass": "^3.3.7",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
